fixed clipping on smaller phones

--- a/App/scss/_buttonContainer.scss
+++ b/App/scss/_buttonContainer.scss
@@ -1,8 +1,8 @@
 #buttonContainer {
-  padding: 3rem;
-  height: 63%;
+  padding: 2rem;
+  height: 70%;
   display: grid;
-  grid-gap: 3rem;
+  grid-gap: 2rem;
   grid-template-columns: auto auto auto auto;
   background-color: $veryDarkDesaturatedBlueScreen;
   border-radius: 10px;
